# Distributed-Log-File-Analyzer

./: .gitignore  CMakeLists.txt  README.md  build_script.sh
src/client/: client.cpp  client.h  main.cpp
src/common/: log_parser.cpp  log_parser.h  protocol.cpp  protocol.h
src/server/: analyzer.cpp  analyzer.h  main.cpp  server.cpp  server.h
